[package]
name = "sqlarfs"
version = "0.1.0"
edition = "2021"
# If you update this, update the GitHub Actions workflow as well.
rust-version = "1.70.0"

[dependencies]
anyhow = "1.0.81"
bitflags = "2.5.0"
flate2 = { version = "1.0.28", optional = true }
rusqlite = { version = "0.31.0", features = ["bundled", "blob"] }

[dev-dependencies]
xpct = "0.5.1"

[features]
default = ["deflate"]
deflate = ["dep:flate2"]
